# Biosim

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml  wizard_sim_ecg_dashboard.html  wizard_sim_ecg_validation.html  wizard_sim_eda_dashboard.html  wizard_sim_eda_validation.html
.github/workflows/: publish.yml
biosignal_simulator/: __init__.py  cli.py
biosignal_simulator/composer/: __init__.py  injector.py  mixer.py  scheduler.py  snr_controller.py
biosignal_simulator/core/: base.py  config.py  math_utils.py  record.py
biosignal_simulator/io/: __init__.py  exporters.py
biosignal_simulator/metrics/: __init__.py  distortion.py  snr.py  spectral.py
biosignal_simulator/noise/: __init__.py  base.py  baseline.py  colored.py  crosstalk.py  electrode.py  (+7 more)
docs/: PROMOTION.md  REFERENCE_MANUAL.md  REFERENCE_MANUAL_APPENDIX.md  USER_GUIDE.md  generate_doc_images.py
tests/: test_cli.py  test_composer.py  test_composer_exhaustive_mixes.py  test_core_abstractions.py  test_ecg.py  test_ecg_arrhythmia_exhaustive.py  test_eeg_sleep_seizure_exhaustive.py  test_emg_fatigue_exhaustive.py  test_integration.py  test_io.py  test_io_robustness_and_corrupt.py  test_math_dsp_exhaustive.py  test_math_utils.py  test_metrics.py  test_noise.py  test_noise_artifacts_and_transients.py  test_noise_colored_and_spatial.py  test_noise_exhaustive.py  test_parameter_bounds.py  test_pathologies_wearable.py  test_ppg_eda_resp_exhaustive.py  test_property.py  test_signals.py  test_signals_exhaustive.py  test_validation.py  test_validation_engine_exhaustive.py  test_visualization.py
(+26 files in other folders)
