[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biosignal-simulator"
version = "0.1.0"
description = "A classical signal processing library for generating synthetic physiological signals with realistic noise."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Rana Talha Khalid", email = "talha.k.rajpoot@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "h5py>=3.8.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/therajpoots/Biosim"
Repository = "https://github.com/therajpoots/Biosim"
Issues = "https://github.com/therajpoots/Biosim/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov"
]

[project.scripts]
biosignal-sim = "biosignal_simulator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["biosignal_simulator*"]
